@@ -622,14 +622,11 @@ static void CL_ParseModellist (void)
 	}
 
 	player_models[0] = (qmodel_t *)Mod_FindName ("models/paladin.mdl");
-	// Note: old demo doesnt have necro and crusader classes. add
-	// a GAME_OLD_DEMO flag check ?
-	player_models[1] = (qmodel_t *)Mod_FindName ("models/crusader.mdl");
-	player_models[2] = (qmodel_t *)Mod_FindName ("models/necro.mdl");
+	player_models[1] = !(gameflags & GAME_OLD_DEMO) ? (qmodel_t *)Mod_FindName ("models/crusader.mdl") : NULL;
+	player_models[2] = !(gameflags & GAME_OLD_DEMO) ? (qmodel_t *)Mod_FindName ("models/necro.mdl") : NULL;
 	player_models[3] = (qmodel_t *)Mod_FindName ("models/assassin.mdl");
 	player_models[4] = (qmodel_t *)Mod_FindName ("models/succubus.mdl");
-//siege
-	player_models[5] = (qmodel_t *)Mod_FindName ("models/hank.mdl");
+	player_models[5] = (qmodel_t *)Mod_FindName ("models/hank.mdl");//siege
 
 	cls.downloadnumber = 0;
 	cls.downloadtype = dl_model;
